--- a/aict/css/common.css
+++ b/aict/css/common.css
@@ -67,15 +67,15 @@ div.bx-wrapper .bx-next:hover {background-position: unset; }
 .section1 > .top::after {content: ''; clear: both; display: block;}
 .section1 > .top .tab {width:720px; float: left; position: relative;}
 .section1 > .top > h4 {font-size:24px; margin-bottom:20px;}
-.section1 > .top .tab > .item.on {display:block;}
-.section1 > .top .tab > .item {display: none; float: left; width:100%; }
+.section1 > .top .tab > .item.on > .content {display: block;}
+.section1 > .top .tab > .item.on > a {border:1px solid #555; background: white;}
+.section1 > .top .tab > .item {display: block; float: left; width:100%; }
 .section1 > .top .tab > .item > a {text-align: center; padding:10px; box-sizing: border-box; border:1px solid #e3e3e3; width:30%; position:absolute; left:0;
-line-height: 25px;}
+line-height: 25px; display:block; background: #f9f9f9;}
 .section1 > .top .tab > .item + .item > a {margin-left:10px;}
 .section1 > .top .tab > .item:nth-child(2) > a {left:30%}
 .section1 > .top .tab > .item:nth-child(3) > a {left:calc(60% + 10px)}
-/* .section1 > .top .tab::after {content: ''; background: url('../images/bg_plus.png') no-repeat 7px 8px; width:25px; height:25px; padding:10px; display: block; position: absolute; top:0; right:0; border:1px solid red;} */
-.section1 > .top .tab > .item > .content {padding:15px 15px 15px 20px; position: absolute; width:calc(100% - 20px); top:55px;}
+.section1 > .top .tab > .item > .content {padding:15px 15px 15px 20px; position: absolute; width:calc(100% - 20px); top:55px; display: none;}
 .section1 > .top .tab > .item > .content > li {position: relative;}
 .section1 > .top .tab > .item > .content > li + li {margin-top:15px;}
 .section1 > .top .tab > .item > .content > li > a::before {
@@ -91,15 +91,16 @@ line-height: 25px;}
 .section1 > .top  .tab .plus_btn > img {padding:15px; vertical-align: middle;}
 .section1 > .top > .photo_slider {width:30%; float: right;}
 .section1 > .top > .photo_slider::after {display: block; content: ''; clear: right;}
-.section1 > .top > .photo_slider > ul > li {height:240px; padding:20px;}
-.section1 > .top > .photo_slider > ul > li > a {color:white;}
-.section1 > .top > .photo_slider > ul > li > a > strong {display: block; font-size:30px;}
-.section1 > .top > .photo_slider > ul > li > a > span:nth-child(2) {display: block;}
-.section1 > .top > .photo_slider > ul > li > a > span:nth-child(3) {display: inline-block; padding:7px 40px; border:1px solid white;}
-.section1 > .top > .photo_slider > ul > li:nth-child(1) {background:url('../images/fieldStory1.jpg')}
-.section1 > .top > .photo_slider > ul > li:nth-child(2) {background:url('../images/fieldStory2.jpg')}
-.section1 > .top > .photo_slider > ul > li:nth-child(3) {background:url('../images/fieldStory3.jpg')}
-.section1 > .top > .photo_slider > ul > li:nth-child(4) {background:url('../images/fieldStory4.jpg')}
+.section1 > .top > .photo_slider ul > li {height:auto; padding:30px;}
+.section1 > .top > .photo_slider ul > li > a {color:white;}
+.section1 > .top > .photo_slider ul > li > a > strong {display: block; font-size:30px; position: relative;}
+.section1 > .top > .photo_slider ul > li > a > strong::after {content:''; position: absolute; top:50px; left: 0;width:10px; border:1px solid white;}
+.section1 > .top > .photo_slider ul > li > a > span:nth-child(2) {display: block; margin:30px 0; font-size: 13px;}
+.section1 > .top > .photo_slider ul > li > a > span:nth-child(3) {display: inline-block; padding:7px 40px; border:1px solid white;}
+.section1 > .top > .photo_slider ul > li:nth-child(1) {background:url('../images/fieldStory1.jpg')}
+.section1 > .top > .photo_slider ul > li:nth-child(2) {background:url('../images/fieldStory2.jpg')}
+.section1 > .top > .photo_slider ul > li:nth-child(3) {background:url('../images/fieldStory3.jpg')}
+.section1 > .top > .photo_slider ul > li:nth-child(4) {background:url('../images/fieldStory4.jpg')}
 .section1 > .bottom {padding:40px;}
 .section1 > .bottom::after {content:''; display: block; clear: left;}
 .section1 > .bottom > ul > li {width:calc(33.33333% - 10px); box-sizing: border-box; float: left; text-align: center; border:1px solid red;}
