--- a/aict/css/common.css
+++ b/aict/css/common.css
@@ -199,10 +199,10 @@ footer {background-color:white;}
 .footer_wrap > .bottom > .bottom_wrap > p + p {margin-top: 5px;}
 .footer_wrap > .bottom > .bottom_wrap > a {position: absolute; top:40px; right:370px;}
 .footer_wrap > .bottom > .bottom_wrap > a > img {width:90px;}
-.bottom div.bx-wrapper {position:absolute; top:40px; right: 167px; width: 190px;}
+.bottom div.bx-wrapper {position:absolute; top:40px; right: 150px; width: 190px;}
 .bottom div.bx-controls-direction {display: none;}
 .bottom div.bx-controls-auto {left:0; top: -35px;}
 .bottom div.bx-pager .divbx-default-pager {background:black; display: block;}
 .bottom div.bx-wrapper img {border:1px solid #e7e7e7;}
 .bottom div.bx-wrapper .bx-controls-auto .bx-start {background: url('../images/btn_play.jpg') no-repeat; width:17px; height:19px;}
-.bottom div.bx-wrapper .bx-controls-auto .bx-stop {background: url('../images/btn_stop.jpg') no-repeat; width:17px; height:19px;}}
+.bottom div.bx-wrapper .bx-controls-auto .bx-stop {background: url('../images/btn_stop.jpg') no-repeat; width:17px; height:19px;}
