--- a/aict/css/common.css
+++ b/aict/css/common.css
@@ -25,6 +25,7 @@ i {font-style: normal;}
 footer{ background: #f8f9fb;}
 
 /* header */
+.wrap {overflow: hidden;}
 header {position: fixed; width:100%; height:90px; background-color: white; z-index: 9999;}
 .header_wrap  {height:90px; max-width: 1150px; margin: 0 auto;}
 .header_wrap::after {display: block; clear: both; content: ''; }
@@ -34,8 +35,10 @@ header {position: fixed; width:100%; height:90px; background-color: white; z-ind
 .header_wrap > nav > ul > li {display: inline-block;}
 .header_wrap > nav > ul > li > a {margin: 0 8px; font-size: 20px;}
 .header_wrap > .utill {float: right; margin-top:25px;}
-.header_wrap > .utill > a:nth-child(2) {background-color: #696e6a; color:white; 
+.header_wrap > .utill > a:nth-child(2) {
+    background-color: #696e6a; color:white; 
     font-size:16px; padding:6px; display: inline-block; vertical-align: top;}
+.drop_menu ul{display: none;}
 
 
 /* slide */
@@ -45,17 +48,18 @@ main {padding-top:90px;}
     text-align: center; width:100%; padding-top:400px;}
 .slide_wrap > li .title_text > p {font-size: 34px;}
 .slide_wrap > li .title_text > strong {font-size: 60px;}
-div.bx-wrapper {box-shadow: none; border:none; padding:0; margin:0;}
-div.bx-pager {display:none;}
-div.bx-wrapper .bx-controls-direction a {height:53px; z-index: 100;}
-div.bx-wrapper .bx-prev {background: url('../images/btn_left.png') no-repeat; left:170px;}
-div.bx-wrapper .bx-prev:hover {background-position: unset;}
-div.bx-wrapper .bx-next {background: url('../images/btn_right.png') no-repeat; right:170px;}
-div.bx-wrapper .bx-next:hover {background-position: unset; }
+.slideimg div.bx-wrapper {box-shadow: none; border:none; padding:0; margin:0;}
+.slideimg div.bx-pager {display:none;}
+.slideimg div.bx-wrapper .bx-controls-direction a {height:53px; z-index: 100;}
+.slideimg div.bx-wrapper .bx-prev {background: url('../images/btn_left.png') no-repeat; left:6%;}
+.slideimg .bx-wrapper img {width:100%;}
+.slideimg div.bx-wrapper .bx-prev:hover {background-position: unset;}
+.slideimg div.bx-wrapper .bx-next {background: url('../images/btn_right.png') no-repeat; right:6%;}
+.slideimg div.bx-wrapper .bx-next:hover {background-position: unset; }
 
 .news {position: absolute; bottom:0; background-color: rgba(255, 255, 255, 0.8);
      padding: 20px 40px; left:50%; transform: translateX(-50%);
-    width:1100px;}
+    width:1120px;}
 .news::after {content: ''; display: block; clear:left}
 .news > p {float: left; font-size: 25px; margin-right: 120px;}
 .news > .news_text {float: left; width:800px; line-height: 30px;}
@@ -93,17 +97,18 @@ line-height: 25px; display:block; background: #f9f9f9;}
 
 
 .photo_slider div.bx-controls-direction {display: none;}
-.photo_slider div.bx-pager {display: block; top:10px; padding:0; bottom:0; }
-div.bx-wrapper div.bx-controls.bx-has-controls-auto.bx-has-pager div.bx-pager {text-align: right; width:85%;}
-div.bx-wrapper .bx-pager.bx-default-pager a {border:1.5px solid white; background: transparent; margin: 0 2px; width:8px; height: 8px;}
-div.bx-wrapper .bx-pager.bx-default-pager a.active {background: white;}
-div.bx-controls-auto {top:8px; padding:0; bottom:0;}
-div.bx-wrapper .bx-controls-auto .bx-start{background: url('../images/bx-play2.png') no-repeat;}
-div.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {width:50px;}
-div.bx-wrapper .bx-controls-auto .bx-start.active {background-position: 0 0;}
-div.bx-wrapper .bx-controls-auto .bx-stop {background: url('../images/bx-stop2.png') no-repeat;}
-div.bx-wrapper .bx-controls-auto .bx-stop.active  {background-position: 0 0;}
-div.bx-wrapper .bx-controls-auto .bx-stop:hover {background-position: 0 0;}
+.photo_slider div.bx-wrapper {box-shadow: none; border:none; margin:0;}
+.photo_slider div.bx-pager {display: block; top:10px; padding:0; bottom:0; right:0;}
+.photo_slider .bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {width:60px; right:45px;}
+.photo_slider div.bx-wrapper .bx-pager.bx-default-pager a {border:1.5px solid white; background: transparent; margin: 0 2px; width:8px; height: 8px;}
+.photo_slider div.bx-wrapper .bx-pager.bx-default-pager a.active {background: white;}
+.photo_slider div.bx-controls-auto {top:8px; padding:0; bottom:0;}
+.photo_slider div.bx-wrapper .bx-controls-auto .bx-start{background: url('../images/bx-play2.png') no-repeat;}
+.photo_slider div.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {width:50px;}
+.photo_slider div.bx-wrapper .bx-controls-auto .bx-start.active {background-position: 0 0;}
+.photo_slider div.bx-wrapper .bx-controls-auto .bx-stop {background: url('../images/bx-stop2.png') no-repeat;}
+.photo_slider div.bx-wrapper .bx-controls-auto .bx-stop.active  {background-position: 0 0;}
+.photo_slider div.bx-wrapper .bx-controls-auto .bx-stop:hover {background-position: 0 0;}
 .section1 > .top > .photo_slider {width:360px; float: right;}
 .section1 > .top > .photo_slider::after {display: block; content: ''; clear: right;}
 .section1 > .top > .photo_slider ul > li {height:auto; padding:30px;}
@@ -152,27 +157,46 @@ div.bx-wrapper .bx-controls-auto .bx-stop:hover {background-position: 0 0;}
 
 
 .photo_wrap {border: 1px solid #e4e4e4; padding:40px 40px; background:white; margin-bottom:50px;}
-.photo_wrap > .left {float: left; width: calc(65% - 80px); }
+.photo_wrap > .left {float: left; }
 .photo_wrap > .left > p {font-size:20px; margin-bottom:15px;}
 .photo_wrap > .left ul {width:100%;}
-.photo_wrap > .left ul > li {width: calc(33.33333% - 15px); float: left; margin-left:15px;}
+.photo_wrap > .left ul > li {width: 215px; float: left; margin-left:20px;}
 .photo_wrap > .left ul > li:first-child {margin:0;}
 .photo_wrap > .left ul > li img {width:100%; height: 149px;}
 .photo_wrap > .left ul > li span {text-align: center; display: block; margin-top:15px; font-weight: bold;}
 .photo > li span {display: block;}
 .photo img {width:230px;}
-.photo_wrap > .right {float: right;}
+.photo_wrap > .right {float: right; position: relative;}
+.photo_wrap div.bx-wrapper {box-shadow: none; border:none; margin:0; width:399px; padding-top:40px;}
+.photo_wrap div.bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {display: none;}
+.photo_wrap div.bx-wrapper .bx-controls-auto {top:0;}
+.photo_wrap .bx-wrapper .bx-prev {background: url('../images/bx-controls-btn.gif') no-repeat left top; width:35px; height:33px; left: 262px;}
+.photo_wrap .bx-wrapper .bx-next {background: url('../images/bx-controls-btn.gif') no-repeat right top; width:35px; height:33px; right:68px;}
+.photo_wrap .bx-wrapper .bx-controls-auto .bx-start {background: url('../images/bx-control-btn1.gif') no-repeat left top; width:35px; height:33px; margin:0;
+position: absolute; top:0; right:34px;}
+.photo_wrap .bx-wrapper .bx-controls-auto .bx-stop {background: url('../images/bx-control-btn1.gif') no-repeat right top; width:35px; height:33px; margin: 0; position: absolute; top:0; right: 0;}
+.photo_wrap .bx-wrapper .bx-next:hover {background-position: right top;}
+.photo_wrap .bx-wrapper .bx-controls-auto .bx-start:hover, .photo_wrap .bx-wrapper .bx-controls-auto .bx-start.active
+{background-position: left top;}
+.photo_wrap .bx-wrapper .bx-controls-auto .bx-stop:hover, .photo_wrap .bx-wrapper .bx-controls-auto .bx-stop.active
+{background-position: right top;}
+.photo_wrap .bx-controls-auto {position: absolute; top:0;}
+.photo_wrap .bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {width:18%;}
+.photo_wrap .bx-wrapper .bx-controls-direction a {top: 16px;}
 .photo_wrap::after {content: ''; display: block; clear: both;}
+.photo_wrap .page {position: absolute; top:5px; right:160px;}
 
 
 /* section3 */
 .section3 {width:1200px; margin: 0 auto;}
 .section3 > .service::after{display: block; content: ''; clear: left;}
 .section3 > .service {position: relative; border-top:1px solid #cecece; 
-    border-bottom:1px solid #cecece; margin-bottom:50px; height:108px;}
+    border-bottom:1px solid #cecece; margin-bottom:50px;}
 .section3 > .service > li {float: left; width:120px; font-size: 0;}
-.section3 > .service > li + li::after{content: ''; position: absolute; top:35px; height: 45px; width:1px; background-color: #cecece;}
-.section3 > .service > li:last-child::after {height:100%; top:0;}
+.section3 > .service > li + li::after{content: ''; position: absolute; top:50%; 
+    transform: translateY(-50%); height: 45px; width:1px; background-color: #cecece;}
+.section3 > .service > li:last-child::after {height:100%; top:50%; 
+    transform: translateY(-50%);}
 
 /* .section3 > .logo {margin-top:50px;} */
 .section3 > .logo > li {float: left;}
@@ -188,7 +212,7 @@ footer {background-color:white;}
 .footer_wrap > .top > .top_wrap > span {float: left;}
 .footer_wrap > .top > .top_wrap > ul {float: right;}
 
-.footer_wrap > .bottom {margin:45px 0; position: relative;}
+.footer_wrap > .bottom {padding:45px 0; position: relative;}
 .footer_wrap > .bottom > .bottom_wrap {max-width:1180px; margin:0 auto;}
 .footer_wrap > .bottom > .bottom_wrap > ul {margin-bottom:15px;}
 .footer_wrap > .bottom > .bottom_wrap > ul::after {display: block; content:''; clear: left;}
@@ -197,12 +221,58 @@ footer {background-color:white;}
 .footer_wrap > .bottom > .bottom_wrap > ul > li:first-child {padding: 0 7px 0 0;}
 .footer_wrap > .bottom > .bottom_wrap > ul > li + li::after {content: ''; position: absolute; top:3px; left:0; border:1px solid rgba(62, 62, 62, 0.697); height: 10px;}
 .footer_wrap > .bottom > .bottom_wrap > p + p {margin-top: 5px;}
-.footer_wrap > .bottom > .bottom_wrap > a {position: absolute; top:40px; right:370px;}
+.footer_wrap > .bottom > .bottom_wrap > a {position: absolute; bottom:40px; right:370px;}
 .footer_wrap > .bottom > .bottom_wrap > a > img {width:90px;}
-.bottom div.bx-wrapper {position:absolute; top:40px; right: 150px; width: 190px;}
-.bottom div.bx-controls-direction {display: none;}
-.bottom div.bx-controls-auto {left:0; top: -35px;}
+.bottom div.bx-wrapper {box-shadow: none; border:none; margin:0;}
+.bottom div.bx-wrapper {position:absolute; bottom:40px; right: 120px; width: 190px;}
+.bottom .bx-wrapper .bx-prev {background: url('../images/btn_prev.jpg') no-repeat left top; width:17px; height:19px; left: 0; top: -10px;}
+.bottom .bx-wrapper .bx-next {background: url('../images/btn_next.jpg') no-repeat right top; width:17px; height:19px; right:0; left: 51px; top: -10px;}
+.bottom div.bx-controls-auto {left:16px; top: -26px;}
 .bottom div.bx-pager .divbx-default-pager {background:black; display: block;}
 .bottom div.bx-wrapper img {border:1px solid #e7e7e7;}
-.bottom div.bx-wrapper .bx-controls-auto .bx-start {background: url('../images/btn_play.jpg') no-repeat; width:17px; height:19px;}
-.bottom div.bx-wrapper .bx-controls-auto .bx-stop {background: url('../images/btn_stop.jpg') no-repeat; width:17px; height:19px;}
+.bottom div.bx-wrapper .bx-controls-auto .bx-start {background: url('../images/btn_play.jpg') no-repeat; width:17px; height:19px; margin:0}
+.bottom div.bx-wrapper .bx-controls-auto .bx-stop {background: url('../images/btn_stop.jpg') no-repeat; width:17px; height:19px; margin:0}
+.bottom .bx-wrapper .bx-next:hover {background-position: right top;}
+.bottom .bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-pager {display: none;}
+
+@media only screen and (max-width:801px) {
+    .header_wrap > nav {display: none;}
+    .header_wrap > h1 > a > img {width:170px;}
+    .header_wrap {padding: 0 20px;}
+}
+
+
+@media only screen and (max-width: 1200px) and (min-width: 800px) {
+    header {width:100%;}
+    .header_wrap {width:95%;}
+    .header_wrap > nav {margin:30px 0 0 20px;}
+    .slide_wrap > li .title_text {padding-top:200px;}
+    .news {width:100%;}
+    .footer_wrap > .top {padding: 20px;}
+    .footer_wrap > .bottom {padding: 45px 20px;}
+    .section1 {width:95%; margin:0 auto;}
+    .section1 > .top {padding:20px;}
+    .section1 > .top .tab {width:65%;}
+    .section1 > .top > .photo_slider {width: 32%;}
+    .section1 > .bottom {padding: 0 20px 20px;}
+    .section1 > .bottom > ul > li {width: calc(33.33333% - 14px)}
+    .section2 {width:95%; margin:0 atuo;}
+    .sns_wrap > div {width:33.3333%; padding:20px; height: 320px;}
+    .section3 {width:100%;}
+    .section3 > .service {margin-bottom:20px;}
+    .section3 > .service > li {width:10%;}
+    .section3 > .service > li img {width:100%;}
+    .logo {width:100%;}
+    .section3 > .logo > li {width:calc(16.66% - 10px);}
+    .section3 > .logo > li > a > img {width:100%;}
+    .photo_wrap {padding:20px;}
+    .photo_wrap > .left {width:70%}
+    .photo_wrap > .left ul > li {width:calc(33.3333% - 20px);}
+    .photo_wrap > .right {width:30%}
+    .photo_wrap div.bx-wrapper {width:100%;}
+    .photo_wrap .bx-wrapper .bx-controls.bx-has-controls-auto.bx-has-pager .bx-controls-auto {width:23%;}
+    .footer_wrap > .bottom > .bottom_wrap {padding-right:250px;}
+    .footer_wrap > .bottom > .bottom_wrap > a {bottom:100px; right:60px;}
+    .bottom div.bx-wrapper {right:50px;}
+}
+
